assets/css/style.css
html, body {
  overflow-x: clip;
}


/* Heebo Fonts */

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/Heebo-VariableFont_wght.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-Black.ttf") format("truetype");
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-ExtraBold.ttf") format("truetype");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-ExtraLight.ttf") format("truetype");
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-Light.ttf") format("truetype");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-SemiBold.ttf") format("truetype");
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: "Heebo";
  src: url("./../fonts/Heebo/static/Heebo-Thin.ttf") format("truetype");
  font-weight: 100;
  font-style: normal;
}

/* Nunito Fonts */
@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/Nunito-Italic-VariableFont_wght.ttf")
    format("truetype");
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/Nunito-VariableFont_wght.ttf")
    format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-ExtraLightItalic.ttf")
    format("truetype");
  font-weight: 200;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-Italic.ttf") format("truetype");
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-Light.ttf") format("truetype");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-LightItalic.ttf")
    format("truetype");
  font-weight: 300;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-MediumItalic.ttf")
    format("truetype");
  font-weight: 500;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-SemiBold.ttf") format("truetype");
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-SemiBoldItalic.ttf")
    format("truetype");
  font-weight: 600;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-Black.ttf") format("truetype");
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-BlackItalic.ttf")
    format("truetype");
  font-weight: 900;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-BoldItalic.ttf")
    format("truetype");
  font-weight: bold;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-ExtraBold.ttf")
    format("truetype");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-ExtraBoldItalic.ttf")
    format("truetype");
  font-weight: 800;
  font-style: italic;
}

@font-face {
  font-family: "Nunito";
  src: url("./../fonts/Nunito/static/Nunito-ExtraLight.ttf")
    format("truetype");
  font-weight: 200;
  font-style: normal;
}

/* Pacifico Font */
@font-face {
  font-family: "Pacifico";
  src: url("./../fonts/Pacifico/Pacifico-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

/* Color Variables */
:root {
  --primary-color: #e5612f; /* Example Primary Color */
  --secondary-color: #6c757d; /* Example Secondary Color */
  --background-color: #eef0f1; /* Example Background Color */
  --text-color: #212529; /* Example Text Color */
  --heading-color: #343a40; /* Example Heading Color */
  --border-color: #dee2e6; /* Example Border Color */
  --text-color-white: #ffff;
}

/* Applying Fonts and Colors to Elements */
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Nunito", sans-serif;
  font-weight: 400;
  background-color: var(--text-color-white);
  color: var(--text-color);
  overflow-x: hidden;
}



h1,
h3,
h4,
h6 {
  font-family: "Nunito", sans-serif;
  font-weight: 800;
  color: var(--heading-color);
}

h2 {
  font-family: "Nunito", sans-serif;
  font-size: 2.5rem;
  font-weight: 800;
}

h5 {
  position: relative;
  display: inline;
  font-family: "Pacifico", cursive;
  color: var(--primary-color);
}

p,
a,
span {
  font-family: "Heebo", sans-serif;
  font-weight: 400;
}
/* ... */

